--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="user_name">username</string>
     <string name="password">password</string>
     <string name="log_in">Log in</string>
+    <string name="show_notes">Show my notes</string>
     <string name="username_error">Username cannot be empty</string>
     <string name="password_error">Password cannot be empty</string>
 
